[package]
name = "blobsum"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.25"
blake3 = { version = "1", features = ["mmap", "rayon"] }
clap = { version = "4.0.8", features = ["derive", "wrap_help"] }
data-encoding = "2.6.0"
hex = "0.4.0"
rayon-core = "1.12.1"
wild = "2.0.3"
lifehash = "0.1.0"
base64 = "0.22.1"
