[package]
name = "blobsum"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A command line utility for calculating S5 blob identifiers (with blake3) and viewing their lifehash (only in kitty)"
repository = "https://github.com/s5-dev/blobsum"

[dependencies]
anyhow = "1.0.25"
blake3 = { version = "1", features = ["mmap", "rayon"] }
clap = { version = "4.0.8", features = ["derive", "wrap_help"] }
data-encoding = "2.6.0"
hex = "0.4.0"
rayon-core = "1.12.1"
wild = "2.0.3"
lifehash = "0.1.0"
base64 = "0.22.1"
